--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 </head>
 <body>
 
-    <form action="https://formsubmit.co/jocrme@gmail.com" method="POST">
+    <form action="https://formsubmit.co/7e9f6e0ae2e0edce1468ee45a75d916e" method="POST">
         <div class="form">
             <div class="subtitle">Cotice su servicio</div>
             <div class="input-container ic1">
